# ollama_toolkit

./: .editorconfig  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  build_docs.sh  cli.py  client.py  development.sh  eidosian_principles.md  exceptions.py  file_tree.txt  init_repo.sh  move_script.sh  ollama_api_replacement.sh  ollama_toolkit.code-workspace  publish.py  publish_to_pypi.sh  pyproject.toml  quickstart.py  rtd_tutorial.md  setup.cfg  setup.py  setup_package.py  update_parent_gitignore.sh  version.py
.pypirc/: pypi_login.ini
docs/: README.md  advanced_usage.md  api_reference.md  changelog.md  chat.md  conf.py  contributing.md  conventions.md  eidosian_integration.md  eidosian_principles.md  embed.md  error_handling.md  examples.md  generate.md  index.md  index.rst  installation.md  model_management.md  models_api.md  quickstart.md  rtd_tutorial.md  system_api.md  troubleshooting.md  version.md
docs/_build/html/: .buildinfo  .buildinfo.bak  README.html  advanced_usage.html  api_reference.html  chat.html  contributing.html  conventions.html  eidosian_integration.html  embed.html  examples.html  generate.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js  troubleshooting.html  version.html
docs/_build/html/.doctrees/: README.doctree  advanced_usage.doctree  api_reference.doctree  changelog.doctree  chat.doctree  contributing.doctree  conventions.doctree  eidosian_integration.doctree  embed.doctree  environment.pickle  error_handling.doctree  examples.doctree  generate.doctree  index.doctree  installation.doctree  model_management.doctree  models_api.doctree  quickstart.doctree  system_api.doctree  troubleshooting.doctree  version.doctree
docs/_build/html/_sources/: advanced_usage.md.txt  contributing.md.txt  conventions.md.txt  eidosian_integration.md.txt  index.md.txt  installation.md.txt  troubleshooting.md.txt
docs/_build/html/_static/: documentation_options.js
examples/: __init__.py  basic_usage.py  chat_example.py  embedding_example.py  generate_example.py  quickstart.py  version_example.py
helpers/: __init__.py  common.py  embedding.py  install_ollama.py  model_constants.py
ollama_forge/: __init__.py  __main__.py  cli.py  client.py  config.py  exceptions.py
ollama_forge/examples/: basic_usage.py  chat_example.py  embedding_example.py
ollama_forge/tools/: __init__.py  install_ollama.py
ollama_forge/utils/: __init__.py
ollama_toolkit/: activate_venv.sh
tests/: __init__.py  conftest.py  test_chat.py  test_client.py  test_coverage.py  test_embedding.py  test_nexus.py  test_utils.py
tools/: __init__.py  install_ollama.py
utils/: __init__.py  common.py  embedding.py  install_ollama.py  model_constants.py
