[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-forge"
version = "0.1.9"
description = "Python client library and CLI for Ollama"
readme = "README.md"
authors = [
    {name = "Lloyd Handyside", email = "ace1928@gmail.com"},
    {name = "Eidos", email = "syntheticeidos@gmail.com"},
]
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = [
    "ollama", "ai", "llm", "language models", 
    "toolkit", "eidos", "forge", "embeddings",
    "inference", "text generation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.26.0,<3.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "colorama>=0.4.4",
    "numpy>=1.19.0",
    "packaging>=20.0",
]

[project.urls]
Homepage = "https://github.com/Ace1928/ollama_forge"
Documentation = "https://ollama-forge.readthedocs.io"
"Bug Tracker" = "https://github.com/Ace1928/ollama_forge/issues"
"Source Code" = "https://github.com/Ace1928/ollama_forge"
Changelog = "https://github.com/Ace1928/ollama_forge/blob/main/CHANGELOG.md"

[project.scripts]
ollama-forge = "ollama_forge.cli:main"

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.20.0",
    "twine>=4.0.2",
    "build>=0.10.0",
]
docs = [
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
    "sphinx-copybutton>=0.5.1",
    "sphinx-autodoc-typehints>=1.22.0",
]
full = [
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "faiss-cpu>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.eggs
  | \.hg
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=ollama_forge --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
