[metadata]
name = ollama_api

[options]
py_modules = 
    ollama_api
    cli
    client
    exceptions
package_dir =
    = .
python_requires = >=3.8
packages = find:

[options.packages.find]
where = .
include = utils, tools, tests, examples
exclude = wheelhouse, docs, __pycache__

[options.package_data]
* = *.md, LICENSE
