[metadata]
name = ollama_api
version = 0.1.0
description = Ollama API Python Client
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/Ace1928/ollama_api
license = MIT
license_files = LICENSE  # Correctly specify the license file

[options]
py_modules = 
    ollama_api
    cli
    client
    exceptions
package_dir =
    = .
python_requires = >=3.6
packages = find:
install_requires =
    requests
    aiohttp
    colorama
    pytest
    unittest

[options.packages.find]
where = .
exclude =
    tests
    examples
    tools

[options.extras_require]
dev =
    black
    flake8
    mypy
    pytest-cov
    sphinx
    twine

[options.package_data]
* = *.md, LICENSE
